--- a/backend_Api/package.json
+++ b/backend_Api/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.12.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "vercel": "^41.4.1"
   }
 }
