fixing mongo uri issue. added new file to test it

--- a/backend_Api/.env
+++ b/backend_Api/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjur.mongodb.net/
+MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/test?retryWrites=true&w=majority
 JWT_SECRET=bmulor
