still fixing mongo uri network bullshit error

--- a/backend_Api/.env
+++ b/backend_Api/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/test?retryWrites=true&w=majority
+#changed network ip in mongo db from 0.0.0.0 to 8.8.8.8
 JWT_SECRET=bmulor
