struggling to resolve timeout error

--- a/backend_Api/.env
+++ b/backend_Api/.env
@@ -1,6 +1,12 @@
 #ls MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/test?retryWrites=true&w=majority
+
+
 MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;
-#changed network ip in mongo db from 0.0.0.0 to 8.8.8.8
+
+
+#MONGO_URI= mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+#NO SRV
 #MONGO_URI=mongodb://bmulor:zdW0MvDIPKrtQAk4@cluster0-shard-00-00.bjur.mongodb.net:27017,cluster0-shard-00-01.bjur.mongodb.net:27017,cluster0-shard-00-02.bjur.mongodb.net:27017/?ssl=true&replicaSet=atlas-xyz-shard-0&authSource=admin&retryWrites=true&w=majority
 
 JWT_SECRET=bmulor
