fixing error with stupid bullshit i added

--- a/backend_Api/.env
+++ b/backend_Api/.env
@@ -1,7 +1,7 @@
 #ls MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/test?retryWrites=true&w=majority
 
 
-MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;
+#MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;
 
 
 #MONGO_URI= mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
@@ -9,4 +9,6 @@ MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net/?retr
 #NO SRV
 #MONGO_URI=mongodb://bmulor:zdW0MvDIPKrtQAk4@cluster0-shard-00-00.bjur.mongodb.net:27017,cluster0-shard-00-01.bjur.mongodb.net:27017,cluster0-shard-00-02.bjur.mongodb.net:27017/?ssl=true&replicaSet=atlas-xyz-shard-0&authSource=admin&retryWrites=true&w=majority
 
+#uri working on JointProject
+MONGO_URI=mongodb+srv://bmulor:zdW0MvDIPKrtQAk4@cluster0.bjrur.mongodb.net
 JWT_SECRET=bmulor
